# Smart-PatientRoom-Monitor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: Cargo.toml  insert_mock_data.sql
backend/frontend/: app.js  index.html  style.css
backend/src/: DB.rs  FHIR.rs  api.rs  main.rs  serial.rs  websocket.rs
tests/: Cargo.toml  activity_tests.rs  alert_tests.rs  api_tests.rs  db_tests.rs  fhir_tests.rs  lib.rs
