[package]
name = "smart_patient_monitor_tests"
version = "0.1.0"
edition = "2021"
description = "Test suite for Smart Patient Room Monitor"
authors = ["Sammy"]

[dependencies]
# Date/time for timestamp tests
chrono = { version = "0.4", features = ["serde"] }

# JSON handling for API response tests
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "smart_patient_monitor_tests"
path = "lib.rs"

# Enable test harness
[[test]]
name = "all_tests"
path = "lib.rs"
